--- a/styles/index.css
+++ b/styles/index.css
@@ -1,21 +1,90 @@
-html,
-body {
-    margin: 0;
-    text-align: center;
+:root {
+	--titles: "Delicious Handrawn", cursive;
 }
 
-*, 
+html,
+body {
+	margin: 0;
+	text-align: center;
+}
+
+*,
 *::after,
 *::before {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* ========
 Layout
 ========= */
+body {
+	background-color: #ffcc99;
+	background-image: url(../assets/wallpaper.jpg);
+	background-size: cover;
+	/* Image by starline on Freepik */
+}
 
+.container {
+	border: 2px solid black;
+	margin: 0 auto;
+	width: 80%;
+	max-width: 400px;
 
+	display: grid;
+	grid-template-rows: 10% 1fr 20%;
+	grid-template-areas:
+		"header"
+		"profile"
+		"dashboard";
+}
+
+header {
+	grid-area: header;
+}
+
+#profile {
+	grid-area: profile;
+}
+
+.dashboard {
+	grid-area: dashboard;
+}
+
+.profile__card {
+    width: 90%;
+}
+
+/* event buttons */
 .btn {
-    padding: .25em .5em;
-    cursor: pointer;
+    margin: .25em;
+    padding: 0.5em;
+    width: 2.75rem;
+    height: 2.75rem;
+    border-radius: 50%;
+    border: none;
+    box-shadow: 0px 10px 10px #929297;
+	cursor: pointer;
+}
+
+.btn img {
+    margin:0 auto;
+    padding-top: 5px;
+    height: 70%;
+    width: auto;
+}
+
+.btn--reset {
+    padding: 0;
+    border-radius: 20px;
+    background: linear-gradient(270deg, #FA695A 0%, #F83375 100%);
+    width: 4rem;
+    height: 2rem;
+}
+
+/* =========
+Typography 
+==========*/
+
+#profile {
+	font-family: var(--titles);
 }
