--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,11 @@
 :root {
-	--titles: "Delicious Handrawn", cursive;
+	--titles: 'Poppins', sans-serif;
+    --text: "Delicious Handrawn", cursive;
 }
 
 html,
 body {
 	margin: 0;
-	text-align: center;
 }
 
 *,
@@ -42,8 +42,15 @@ body {
 	gap: 0.5em;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .dashboard {
 	margin-bottom: 0.5em;
+    text-align: center;
 }
 
 /* rendered dog card */
@@ -51,31 +58,45 @@ body {
 	margin: 0 auto;
 	width: 95%;
 	height: auto;
+	position: relative;
 }
 
 .card__image {
-	position: relative;
 	width: 100%;
-	height: min(55vh, 450px);
+	height: min(60vh, 450px);
 	object-fit: cover;
 	z-index: 1;
 	border-radius: 7.5px;
 }
 
+.card__status,
+.card__bio {
+    position: absolute;
+    z-index: 2;
+}
+
+.card__bio {
+    bottom: .75em;
+    left: 1em;
+} 
+
+.card__bio p {
+    margin-top: 0em;
+    margin-bottom: .25em;
+}
+
 .card__status {
-	position: absolute;
 	width: min(40%, 200px);
 	height: auto;
 	inset: -70px 0 0 -70px;
-	z-index: 2;
 	transform: rotate(-40deg);
 	animation: stamp 1000ms ease-in forwards;
 }
 
 @keyframes stamp {
 	100% {
-		left: 100px;
-		top: 30%;
+		left: 7%;
+		top: 10%;
 	}
 }
 
@@ -86,12 +107,17 @@ body {
     height: min(55vh, 450px);
     border-radius: 7.5px;
     padding: 2em;
+    text-align: center;
 }
 
 .gameOverContainer ul {
     list-style-type: none;
-    padding: 0;
+    padding: .25em;
     margin: 0;
+}
+
+.gameOverContainer li {
+    padding: .25em;
 }
 
 .gameOver__image {
@@ -110,6 +136,7 @@ body {
 	border: none;
 	box-shadow: 0px 10px 10px #a4a7a7;
 	cursor: pointer;
+    transition: background-color 500ms ease;
 }
 
 .btn img {
@@ -130,19 +157,32 @@ body {
 .btn--reset {
 	padding: 0;
 	border-radius: 20px;
-	background: linear-gradient(270deg, #fa695a 0%, #f83375 100%);
+	background-image: linear-gradient(270deg, #fa695a 0%, #f83375 100%);
 	width: 4rem;
 	height: 2rem;
 }
 
 .btn--reset:hover {
-    background: linear-gradient(270deg, #fa6a5a33 0%, #58b2c2 100%);
+    background-image: linear-gradient(270deg, #fa6a5a 0%,  pink 100%);
 }
 
 /* =========
 Typography 
 ==========*/
 
-#profile {
+.card__heading,
+.gameOverContainer {
 	font-family: var(--titles);
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.card__bio,
+.gameOverContainer ul {
+    font-family: var(--text);
+}
+
+.card__heading,
+.card__bio {
+    color: whitesmoke;
 }
